Week 7 update/ Housekeeping

--- a/2025-projects/team-1/Finetune/pytorchcaney/.gitignore
+++ b/2025-projects/team-1/Finetune/pytorchcaney/.gitignore
@@ -23,3 +23,10 @@ cloud_mask_pipeline.py
 multitask_pipeline.py
 phase_pred_pipeline.py
 regression_pipeline.py
+
+# ----- Archive -----
+old/
+**/old
+
+# other ----
+slurm_logs/
