--- a/2025-projects/team-1/Finetune/pytorchcaney/configs/PhasePred_VPT.yaml
+++ b/2025-projects/team-1/Finetune/pytorchcaney/configs/PhasePred_VPT.yaml
@@ -15,7 +15,7 @@ MODEL:
   LORA: False
   LORA_RANK: 64
   VPT: True
-  NUM_PROMPTS: 300
+  NUM_PROMPTS: 200
   IN_CHANS: 16
   DROP_PATH_RATE: 0.1
   SWINV2:
@@ -44,9 +44,9 @@ TRAIN:
     GAMMA: 0.1
     MULTISTEPS: [700,]
 LOSS:
-  NAME: 'ce'
+  NAME: 'CEDice'
 PRECISION: "bf16"
 PRINT_FREQ: 10 
 SAVE_FREQ: 1
 VALIDATION_FREQ: 10
-TAG: PP_VPT_300
+TAG: PP_VPT_200_dice
