--- a/2025-projects/team-1/Finetune/pytorchcaney/configs/CloudMask_LoRA.yaml
+++ b/2025-projects/team-1/Finetune/pytorchcaney/configs/CloudMask_LoRA.yaml
@@ -2,7 +2,7 @@ PIPELINE: 'CloudMask'
 DATAMODULE: null
 MODEL:
   PREPROCESSOR:
-    NAME: 'conv' # acceptable is mlp or conv
+    NAME: '' # acceptable is mlp or conv
     HIDDEN_DIMS: [16,16]
     CONV_KERNEL_SIZE: 3
   ENCODER: 'satvision'
@@ -13,10 +13,10 @@ MODEL:
   FREEZE_ALL: True
   FREEZE_LAYER: 3
   LORA: True
-  LORA_RANK: 64
+  LORA_RANK: 16
   VPT: False
   NUM_PROMPTS: 10
-  IN_CHANS: 16
+  IN_CHANS: 14
   DROP_PATH_RATE: 0.1
   SWINV2:
     IN_CHANS: 14
@@ -49,4 +49,4 @@ PRECISION: "bf16"
 PRINT_FREQ: 10 
 SAVE_FREQ: 1
 VALIDATION_FREQ: 10
-TAG: CloudMask_LoRA_improved
+TAG: CloudMask_LoRA_r32_14bands
